Spacing fixes on buttons

--- a/css/userReservations.css
+++ b/css/userReservations.css
@@ -41,7 +41,7 @@ html body {
 }
 
 #menuItems a:hover {
-    background-color: rgba(255, 255, 255, .4);
+    background-color: rgba(255, 255, 255, .2);
 }
 
 #menuItems a div {
@@ -128,11 +128,12 @@ table tr td:nth-child(1) {
 }
 
 table tr td:nth-child(2) {
-    padding: 0;
+    padding: .2rem;
 }
 
 table tr td a {
-    padding: 1rem 2rem;
+    width: 49%;
+    padding: .7rem 2rem;
 
     border: .1rem solid rgb(236, 212, 104);
     
